<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".AddResultActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/addDataToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <EditText
        android:id="@+id/winMatchFirstFighterEd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_pressed"
        android:drawableEnd="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:ems="10"
        android:hint="@string/firstFighterWinner"
        android:inputType="number|numberDecimal"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/winMatchSecondFighterEd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDataToolbar"
        app:layout_constraintVertical_chainStyle="spread" />

    <EditText
        android:id="@+id/winMatchSecondFighterEd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/edittext_pressed"
        android:drawableEnd="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:ems="10"
        android:hint="@string/secondFighterWinner"
        android:inputType="number|numberDecimal"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/winFirstRoundEd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winMatchFirstFighterEd" />

    <EditText
        android:id="@+id/winFirstRoundEd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/edittext_pressed"
        android:drawableEnd="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:ems="10"
        android:hint="@string/firstRoundWinner"
        android:inputType="number|numberDecimal"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/winSecondRoundResultEd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winMatchSecondFighterEd" />

    <EditText
        android:id="@+id/winSecondRoundResultEd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/edittext_pressed"
        android:drawableEnd="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:ems="10"
        android:hint="@string/secondRoundWinner"
        android:inputType="number|numberDecimal"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/fatalityTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winFirstRoundEd" />

    <EditText
        android:id="@+id/fatalityTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/edittext_pressed"
        android:drawableEnd="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:ems="10"
        android:hint="@string/fatality"
        android:inputType="number|numberDecimal"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/brutalityTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/winSecondRoundResultEd" />

    <EditText
        android:id="@+id/brutalityTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/edittext_pressed"
        android:drawableEnd="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:ems="10"
        android:hint="@string/brutality"
        android:inputType="number|numberDecimal"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/withoutSpecFinEd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fatalityTv" />

    <EditText
        android:id="@+id/withoutSpecFinEd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/edittext_pressed"
        android:drawableEnd="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:ems="10"
        android:hint="@string/withoutSpecFinish"
        android:inputType="number|numberDecimal"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/scoreEd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brutalityTv" />

    <EditText
        android:id="@+id/scoreEd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/edittext_pressed"
        android:drawableEnd="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:ems="10"
        android:hint="@string/score"
        android:inputType="number|numberDecimal"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/matchCourseEd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/withoutSpecFinEd" />

    <EditText
        android:id="@+id/matchCourseEd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/edittext_pressed"
        android:drawableEnd="@drawable/logo"
        android:drawableRight="@drawable/logo"
        android:ems="10"
        android:hint="@string/matchCourse"
        android:inputType="textPersonName"
        android:paddingBottom="4dp"
        android:paddingLeft="8dp"
        android:paddingStart="8dp"
        android:paddingTop="4dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/addDataBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scoreEd" />

    <Button
        android:id="@+id/addDataBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginStart="50dp"
        android:background="@color/colorPrimaryDark"
        android:onClick="addResult"
        android:text="@string/addBtn"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>